# service_contract

./: .gitignore  AGENT.md  README.md  pyproject.toml
app/: db.py  main.py  services.py
app/templates/: base.html  contracts.html  event_form.html  invoices.html  usage_import.html
data/: service_contract.duckdb
doc/: data_model_and_state_design.md  service_spec.md
src/service_contract/adapters/duckdb/: db.py  repositories.py
src/service_contract/adapters/internal/: api_key_issuer.py
src/service_contract/application/: ports.py  service.py
src/service_contract/cli/: main.py
src/service_contract/domain/: models.py  projector.py
tests/: test_contract_service.py  test_services.py
